# Malbolge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SECURITY.md  main.cpp
.github/workflows/: codeql-analysis.yml
src/: CMakeLists.txt  helloWorld.cpp  main.cpp
src/Client/: ClientNetwork.cpp  Networking.cpp  Networking.h  ServerNetwork.cpp  main.cpp
src/POW/: POW.cpp  POW.h  PrimeGenerator.cpp  PrimeGenerator.h  Solver.cpp  Solver.h
